Refactor ASTAStrategy backfill, move getDailyPrice to DailyPriceRepository, and clean up linter warnings